# k4a-imviewer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_k4a_imviewer.bat  build_kinect_view.bat  build_release.bat  main.cpp  run_k4a_imviewer.bat  run_kinect_view.bat  개발보고서.docx  개발보고서.md
include/: gl_force_include.h
models/: README.md
src/: k4a_imviewer.cpp  rvm_floor_fx.cpp  rvm_floor_fx.hpp  viewer_settings_io.cpp  viewer_settings_io.hpp
tools/: gen_docx_report.py
